force-app/main/default/objects/BMCServiceDesk__Advanced_Search_Filter_Criteria__c/BMCServiceDesk__Advanced_Search_Filter_Criteria__c.object-meta.xml
<CustomObject>
    <description>Stores the criteria defined for advanced search filters in the CMDB list view.</description>
    <label>Advanced Search Filter Criteria</label>
    <nameField>
        <displayFormat>FC-{0000000000}</displayFormat>
        <label>Filter Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Search Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>