force-app/main/default/objects/BMCServiceDesk__Advanced_Search_Filter_Criteria__c/fields/BMCServiceDesk__Field_Info__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field_Info__c</fullName>
    <description>Stores API name of the fields used in the filter criteria along with the namespace.</description>
    <inlineHelpText>Stores API name of the fields used in the filter criteria along with the namespace.</inlineHelpText>
    <label>Field Info</label>
    <length>80</length>
    <type>Text</type>
</CustomField>