force-app/main/default/objects/BMCServiceDesk__Advanced_Search_Filter_Criteria__c/fields/BMCServiceDesk__FKFilter_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKFilter_Name__c</fullName>
    <description>Stores name of the advanced search filter.</description>
    <inlineHelpText>Stores name of the advanced search filter.</inlineHelpText>
    <label>Filter Name</label>
    <referenceTo>BMCServiceDesk__Advanced_Search_Filter__c</referenceTo>
    <relationshipLabel>Advanced Search Filter Criteria</relationshipLabel>
    <relationshipName>Advanced_Search_Filter_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>