force-app/main/default/objects/BMCServiceDesk__Advanced_Search_Filter_Criteria__c/fields/BMCServiceDesk__Grouping_Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
    <description>Stores the value for grouping operator. For example, the value stored for the AND condition is 1.</description>
    <inlineHelpText>Stores the value for grouping operator. For example, the value stored for the AND condition is 1.</inlineHelpText>
    <label>Grouping Operator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>