force-app/main/default/objects/BMCServiceDesk__Advanced_Search_Filter_Criteria__c/fields/BMCServiceDesk__Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operator__c</fullName>
    <description>Stores operators used in the filter criteria. For example, = and LIKE.</description>
    <inlineHelpText>Stores operators used in the filter criteria. For example, = and LIKE.</inlineHelpText>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>